--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "小胖轩" 
 header-img: "img/home-bg.jpg"
 email: "app@codeboy.me"
-url: "http://127.0.0.1"
+url: "https://github.com/yzhzeng/CodeboyBlog"
 description: "编码生涯的点点滴滴"
 github_username:  "androiddevelop"
 zhihu_username: "codeboy"
