--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "小胖轩" 
 header-img: "img/home-bg.jpg"
 email: "app@codeboy.me"
-url: "https://yzhzeng.github.io/CodeboyBlog/"
+url: "https://yzhzeng.github.io"
 description: "编码生涯的点点滴滴"
 github_username:  "androiddevelop"
 zhihu_username: "codeboy"
@@ -53,7 +53,7 @@ incremental: false
 detach:  false
 port:    4000
 host:    127.0.0.1
-baseurl: "" # does not include hostname
+baseurl: "/CodeboyBlog" # does not include hostname
 
 # Outputting
 permalink: pretty
